--- a/src/css/invoice.css
+++ b/src/css/invoice.css
@@ -168,6 +168,13 @@
   padding: 0.5rem 0.75rem;
   border: 1px solid #e2e8f0;
   color: #475569;
+  height: 100%;
+  vertical-align: top;
+}
+
+.invoice-view table td[colspan="2"] {
+  height: 100%;
+  padding: 0.5rem;
 }
 
 .address-block {
@@ -344,10 +351,11 @@
   border: 1px solid #e2e8f0;
   border-radius: 4px;
   width: 100%;
+  height: 100%;
   background-color: #fff;
   transition: all 0.2s ease;
-  resize: vertical;
-  min-height: 80px;
+  resize: none;
+  min-height: unset;
 }
 
 .notification-textarea:focus {
